dataset/local/df_check_apt_force_yes/resource.yaml
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: good-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: RUN
        CmdLine:
          - "apt-get update && apt-get install -y wget"
        PrependShell: true
---
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: bad-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: RUN
        CmdLine:
          - "apt-get install --force-yes wget"
        PrependShell: true
