dataset/local/df_check_apt_force_yes/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-apt-command-force-yes
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-apt-command-force-yes
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: check-apt-command-force-yes
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
